LOOKS: Fix gallery modal from clipping images

--- a/source/stylesheets/partials/_gallerymodal.scss
+++ b/source/stylesheets/partials/_gallerymodal.scss
@@ -33,7 +33,6 @@ dialog.modal.gallery {
       }
     }
     ul {
-      flex: 4;
       // // grab
       // cursor: grab;
       // cursor: -webkit-grab;
